--- a/index.html
+++ b/index.html
@@ -383,37 +383,9 @@
                                           </div>
                                       </div>
                                   </div>
-                              </div>of VQA app" src="/assets/img/project-vqa-logo.jpg" style="height: 100%; width: 100%" class="activator" />
+                              </div src="/assets/img/project-vqa-logo.jpg" style="height: 100%; width: 100%" class="activator" />
                             </div>
-                            <div class="card-content">
-                              <span class="card-title activator teal-text hoverline">Visual Question Answering App<i
-                                  class="mdi-navigation-more-vert right"></i></span>
-                              <p>
-                                A web application that answers open-ended questions about an image.
-                              </p>
-                            </div>
-                            <div class="card-reveal">
-                              <span class="card-title grey-text"><small>Accomplishments</small><i
-                                  class="mdi-navigation-close right"></i></span>
-                              <ul>
-                                <li><b>Tools:</b> Python, Flask, PyTorch, OpenCV, Heroku</li>
-                                <li>Built a web app that answers open-ended questions about an image.</li>
-                                <li>Used a pre-trained ResNet model to extract the features of the image.</li>
-                                <li>Used a GRU based language model to generate the answer.</li>
-                              </ul>
-                              <div class="card-action">
-                                <a aria-label="Visit " href="https://vqa-app.herokuapp.com" target="_blank" data-position="top"
-                                  data-tooltip="View Online"
-                                  class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                                    class="fa fa-external-link"></i></a>
-                                <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/vqa-app"
-                                  target="_blank" data-position="top" data-tooltip="View Source"
-                                  class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                                    class="fa fa-github"></i></a>
-                              </div>
-                            </div>
-                          </div>
-                        </div> -->
+                           
               
                               </div>
                           </div>
